JumpScript/tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(13,11): error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(14,11): error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(17,11): error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(18,11): error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(21,11): error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(22,11): error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(25,11): error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(26,11): error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(29,11): error TS2365: Operator '==' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(30,11): error TS2365: Operator '==' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(33,11): error TS2365: Operator '!=' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(34,11): error TS2365: Operator '!=' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(37,11): error TS2365: Operator '===' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(38,11): error TS2365: Operator '===' cannot be applied to types 'B1' and 'A1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(41,11): error TS2365: Operator '!==' cannot be applied to types 'A1' and 'B1'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump(42,11): error TS2365: Operator '!==' cannot be applied to types 'B1' and 'A1'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.jump (16 errors) ====
    interface A1 {
        b?: number;
    }
    
    interface B1 {
        b?: string;
    }
    
    var a: A1;
    var b: B1;
    
    // operator <
    var ra1 = a < b;
              ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
    var ra2 = b < a;
              ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
    
    // operator >
    var rb1 = a > b;
              ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
    var rb2 = b > a;
              ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
    
    // operator <=
    var rc1 = a <= b;
              ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
    var rc2 = b <= a;
              ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
    
    // operator >=
    var rd1 = a >= b;
              ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
    var rd2 = b >= a;
              ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
    
    // operator ==
    var re1 = a == b;
              ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'A1' and 'B1'.
    var re2 = b == a;
              ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'B1' and 'A1'.
    
    // operator !=
    var rf1 = a != b;
              ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'A1' and 'B1'.
    var rf2 = b != a;
              ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'B1' and 'A1'.
    
    // operator ===
    var rg1 = a === b;
              ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'A1' and 'B1'.
    var rg2 = b === a;
              ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'B1' and 'A1'.
    
    // operator !==
    var rh1 = a !== b;
              ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'A1' and 'B1'.
    var rh2 = b !== a;
              ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'B1' and 'A1'.